--- a/css/CGU.css
+++ b/css/CGU.css
@@ -15,7 +15,7 @@
 .CGU h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
-    line-height: 108%;
+    line-height: 35px;
     color: #128D5A;
 }
 .CGU .sous-titre {
@@ -25,15 +25,14 @@
 }
 .CGU h2 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 26px;
     margin-top: 40px;
-    line-height: 108%;
     color: #199688;
 }
 .CGU p {
     color: black;
-    line-height: 1.5625rem;
-    font-size: 1.0625rem;
+    line-height: 25px;
+    font-size: 18px;
     flex-wrap: wrap;
 }
 .CGU p span {
@@ -42,4 +41,24 @@
 }
 .CGU ul li {
     margin-left: 3%;
+}
+/* Mise en forme pour écran entre 1200 px et 1600px  */
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+    .CGU h2 {
+        font-size: 28px;
+    }
+    .CGU p {
+        line-height: 28px;
+        font-size: 20px;
+    }
+}
+/* Mise en forme pour écran supérieur à 1600px */
+@media screen and (min-width: 1600px) {
+    .CGU h2 {
+        font-size: 30px;
+    }
+    .CGU p {
+        line-height: 30px;
+        font-size: 22px;
+    }
 }
