--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -1,113 +1,171 @@
+/* ------------------------------------------------------- */
+/*           MISE EN FORME DE MA PAGE PORTFOLIO            */
+
+/* --------------------------------- */
+/* --------------------------------- */
+/* MISE EN FORME DU TITRE DE LA PAGE */
+/* --------------------------------- */
+#portfolio_entrep .portfolio_titre {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 20vh;
+    align-items: center;
+    margin-top: 8vh;
+    background-image: url("../img/Fond_titre.webp");
+    background-size: cover;
+}
+#portfolio_entrep .portfolio_titre .portfolio_flou {
+    font-family: cursive;
+    text-align: center;
+    font-size: 200px;
+    color: rgb(3 125 141);
+    text-shadow:  white 0.006em 0.006em 0.007em,
+                    #9c9c9c 1px 1px 1px,
+                    #9c9c9c 1px 2px 1px,
+                    #9c9c9c 1px 3px 1px,
+                    #9c9c9c 1px 4px 1px,
+                    #9c9c9c 1px 5px 1px,
+                    #9c9c9c 1px 6px 1px,
+                    #9c9c9c 1px 7px 1px,
+                    #9c9c9c 1px 8px 1px,
+                    #9c9c9c 1px 9px 1px,
+                    #9c9c9c 1px 10px 1px,
+                    #9c9c9c 1px 11px 1px,
+                    #9c9c9c 1px 12px 1px;
+}
+/* Mise en forme pour écran < 450px */
+@media screen and (max-width: 450px) {
+    #portfolio_entrep .portfolio_titre {
+        grid-template-rows: 20vh;
+    }
+    #portfolio_entrep .portfolio_titre .portfolio_flou {
+        font-size: 50px;
+	}
+}
+/* Mise en forme pour écran entre 450 px et 700px */
+@media screen and (min-width: 450px) and (max-width: 700px) {
+    #portfolio_entrep .portfolio_titre {
+        grid-template-rows: 25vh;
+    }
+    #portfolio_entrep .portfolio_titre .portfolio_flou {
+        font-size: 100px;
+	}
+}
+/* Mise en forme pour écran entre 700 px et 1200px  */
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+    #portfolio_entrep .portfolio_titre {
+        grid-template-rows: 30vh;
+    }
+    #portfolio_entrep .portfolio_titre .portfolio_flou {
+        font-size: 120px;
+	}
+}
+/* Mise en forme pour écran entre 1200 px et 1600px  */
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+    #portfolio_entrep .portfolio_titre {
+        grid-template-rows: 35vh;
+    }
+    #portfolio_entrep .portfolio_titre .portfolio_flou {
+        font-size: 150px;
+	}
+}
+/* Mise en forme pour écran supérieur à 1600px */
+@media screen and (min-width: 1600px) {
+    #portfolio_entrep .portfolio_titre {
+        grid-template-rows: 40vh;
+    }
+    #portfolio_entrep .portfolio_titre .portfolio_flou {
+        font-size: 200px;
+	}
+}
+
 /* --------------------------------------------------- */
 /* --------------------------------------------------- */
 /*              MISE EN FORME DU PORTFOLIO             */
 /* --------------------------------------------------- */
 
-.titre_portfolio {
-    background: #333;
-}
-.titre_portfolio #portfolio_titre .portfolio_flou {
-    font-family: 'Odor Mean Chey', serif;
-    font-size: 200px;
+#portfolio_entrep .header {
     text-align: center;
-    line-height: 15%;
-    padding-top: 9%;
-    opacity: 5px;
-    color: rgba(3, 125, 141, 0.199);
+    padding: 32px;
 }
-.titre_portfolio #portfolio_titre .portfolio_double {
-    font-family: 'Odor Mean Chey', serif;
-    font-size: 125px;
-    text-align: center;
-    line-height: 40%;
-    padding-bottom: 5%;
-    margin: 0;
-    color: #FFFFFF;
+  
+#portfolio_entrep .portfolio {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+  
+#portfolio_entrep .column {
+    -ms-flex: 33%; /* IE10 */
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 4px;
+}
+  
+#portfolio_entrep .column img {
+    vertical-align: middle;
+    width: 100%;
+}
+  
+@media screen and (max-width: 1200px) {
+    #portfolio_entrep .column {
+      -ms-flex: 50%;
+      flex: 50%;
+      max-width: 50%;
+    }
+}
+  
+@media screen and (max-width: 600px) {
+    #portfolio_entrep .column {
+      -ms-flex: 100%;
+      flex: 100%;
+      max-width: 100%;
+    }
 }
 
-.portfolio picture {
-    --border-width: 10%;
+
+/*#portfolio_entrep .portfolio .column .rex_client {
+    float: left;
+    color: black;
+    width: 100;
+    text-align: center;
+    margin: 2px;
+    display: none;
+}*/
+ 
+#portfolio_entrep .portfolio .column .rex_client {
     position: relative;
-    display: inline-flex;
+    margin-top: 10px;
+    padding: 0 0px;
 }
-.portfolio picture img {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 2%;
-    padding-right: 2%;
-    border-radius: 10%;
-    width: 155%;
-    height: auto;
-}
-.portfolio figcaption {
+  
+#portfolio_entrep .portfolio .column .rex_client .overlay {
     position: absolute;
-    top: 50%;
-    left: var(--border-width);
-    right: var(--border-width);
-    text-align: center;
-    transform: translateY(-50%);
-    background: rgba(0, 0, 0, 0.637);
-    text-align: -webkit-center;
+    bottom: 100%;
+    background-color: #008CBA;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+}
+  
+#portfolio_entrep .portfolio .column .rex_client:hover .overlay {
+    bottom: 0;
+    height: 100%;
+}
+  
+#portfolio_entrep .portfolio .column .rex_client .text {
     color: white;
-    opacity: 0;
-    transition: opacity .66s 0s ease-in-out;
-}
-.portfolio picture figcaption h1 {
-    text-align: center;
-    margin-left: auto;
-    margin: 0 0 0 0;
-    margin-right: auto;
-    display: table-cell;
-    font-family: 'Odor Mean Chey', serif;
-    font-size: 30px;
-}
-.portfolio picture:hover figcaption {
-    opacity: 1;
-}
-.portfolio picture figcaption p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-/* Mise en forme pour Ã©cran 14 pouces ou moins */
-@media screen and (max-width: 750px) {
-    .titre_portfolio #portfolio_titre .portfolio_flou {
-        font-size: 60px;
-        padding-top: 25%;
-	}
-    .titre_portfolio #portfolio_titre .portfolio_double {
-        font-size: 50px;
-	}
-    .portfolio picture img {
-        width: 100%;
-        height: auto;
-    }
+    position: absolute;
+    text-align: center;
+    align-items: center;
 }
 
 
-/* Mise en forme pour Ã©cran 14 pouces ou moins */
-@media screen and (min-width: 750px) and (max-width: 1200px) {
-    .titre_portfolio #portfolio_titre .portfolio_flou {
-        font-size: 100px;
-        padding-top: 10%;
-	}
-    .titre_portfolio #portfolio_titre .portfolio_double {
-        font-size: 45px;
-	}
-}
 
-/* Mise en forme pour Ã©cran 14 pouces ou moins */
-@media screen and (min-width: 1200px) and (max-width: 1470px) {
-    .titre_portfolio #portfolio_titre .portfolio_flou {
-        font-size: 48px;
-	}
-    .titre_portfolio #portfolio_titre .portfolio_double {
-        font-size: 38px;
-	}
-}
 
-@media screen and (min-width: 1024px) {
-    .titre_portfolio #portfolio_titre .portfolio_flou {
-        grid-template-columns: repeat(2, 40% 60%);
-    }
-}
+
+
