--- a/css/chat.css
+++ b/css/chat.css
@@ -5,7 +5,7 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.collapsible {
+.chat-bar-collapsible .collapsible {
     background-color: rgb(82, 151, 255);
     color: white;
     cursor: pointer;
@@ -19,14 +19,14 @@
     border-bottom: none;
 }
 
-.content {
+.chat-bar-collapsible .content {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
 }
 
-.full-chat-block {
+.chat-bar-collapsible .full-chat-block {
     width: 350px;
     background: white;
     text-align: center;
@@ -36,19 +36,19 @@
     transition: max-height 0.2s ease-out;
 }
 
-.outer-container {
+.chat-bar-collapsible .outer-container {
     min-height: 500px;
     bottom: 0%;
     position: relative;
 }
-.outer-container .questions_posees {
+.chat-bar-collapsible .outer-container .questions_posees {
     padding: 1em;
     overflow: hidden;
     position: relative;
     border-radius: 4px;
     background-color: rgb(255, 255, 255);
 }
-.chat-container .questions_posees h3 {
+.chat-bar-collapsible .content .full-chat-block .outer-container .chat-container .questions_posees h3 {
     color: #000;
     font-size: 20px;
     font-weight: 600;
@@ -56,19 +56,24 @@
     text-align: start;
     padding-left: 10px;
     padding-bottom: 0;
+    margin: 20px 0px 20px 0px;
+    padding-bottom: 10px;
 }
-.chat-container .questions_posees ol {
+.chat-bar-collapsible .content .full-chat-block .outer-container .chat-container .questions_posees ol {
     margin-top: 0;
     margin-left: 10px;
     text-align: start;
     padding-left: 1.4em;
     text-align: left;
+    margin: 0px 0px 16px 10px;
+    color: black;
+    padding-bottom: 10px;
 }
-.chat-container .questions_posees li {
+.chat-bar-collapsible .content .full-chat-block .outer-container .chat-container .questions_posees ol li {
     margin-bottom: .5em;
 }
 
-.chat-container {
+.chat-bar-collapsible .chat-container {
     max-height: 500px;
     width: 100%;
     position: absolute;
@@ -78,11 +83,11 @@
     hyphens: auto;
 }
 
-.chat-container::-webkit-scrollbar {
+.chat-bar-collapsible .chat-container::-webkit-scrollbar {
     display: none;
 }
 
-.chat-bar-input-block {
+.chat-bar-collapsible .chat-bar-input-block {
     display: flex;
     position: static;
     float: left;
@@ -90,12 +95,13 @@
     justify-content: space-between;
     width: 100%;
     align-items: center;
-    background-color: rgb(235, 235, 235);
+    background-color: #cccccc9e;
     border-radius: 10px 10px 0px 0px;
     padding: 10px 0px 10px 10px;
+    margin-top: 10px;
 }
 
-.chat-bar-icons {
+.chat-bar-collapsible .chat-bar-icons {
     display: flex;
     justify-content: space-evenly;
     box-sizing: border-box;
@@ -104,17 +110,17 @@
     font-size: 20px;
 }
 
-#chat-icon:hover {
+.chat-bar-collapsible #chat-icon:hover {
     opacity: .7;
 }
 
 /* Chat bubbles */
 
-#userInput {
+.chat-bar-collapsible #userInput {
     width: 75%;
 }
 
-.input-box {
+.chat-bar-collapsible .input-box {
     float: left;
     border: none;
     box-sizing: border-box;
@@ -127,36 +133,39 @@
     outline: none
 }
 
-.userText {
+.chat-bar-collapsible .userText {
     color: white;
     font-family: Helvetica;
     font-size: 16px;
     font-weight: normal;
     text-align: right;
     clear: both;
+    padding-bottom: 10px;
 }
 
-.userText span {
+.chat-bar-collapsible .userText span {
     line-height: 1.5em;
     display: inline-block;
-    background: #5ca6fa;
+    background: #0e7994cf;
     padding: 10px;
     border-radius: 8px;
     border-bottom-right-radius: 2px;
     max-width: 80%;
     margin-right: 10px;
-    animation: floatup .5s forwards
+    animation: floatup .5s forwards;
+    color: white;
 }
 
-.botText {
+.chat-bar-collapsible .botText {
     color: #000;
     font-family: Helvetica;
     font-weight: normal;
     font-size: 16px;
     text-align: left;
+    padding-bottom: 10px;
 }
 
-.botText span {
+.chat-bar-collapsible .botText span {
     line-height: 1.5em;
     display: inline-block;
     background: #e0e0e0;
@@ -165,7 +174,8 @@
     border-bottom-left-radius: 2px;
     max-width: 80%;
     margin-left: 10px;
-    animation: floatup .5s forwards
+    animation: floatup .5s forwards;
+    color: black;
 }
 
 @keyframes floatup {
@@ -180,7 +190,7 @@
 }
 
 @media screen and (max-width:600px) {
-    .full-chat-block {
+    .chat-bar-collapsible .full-chat-block {
         width: 100%;
         border-radius: 0px;
     }
@@ -190,7 +200,7 @@
         right: 0;
         width: 100%;
     }
-    .collapsible {
+    .chat-bar-collapsible .collapsible {
         width: 100%;
         border: 0px;
         border-top: 3px solid white;
