--- a/css/contact.css
+++ b/css/contact.css
@@ -1,49 +1,145 @@
-body::before {
-    content: "";
-    padding: 0;
-    margin: 0;
-    position: fixed;
-    background: #f5ecec url("../img/contact.webp") top right no-repeat;
-    background-size: cover;
-    background-position: center;
-    left: 0;
-    right: 0;
-    top: 0;
-    box-sizing: border-box;
-    width: 100%;
-    z-index: -1;
+/* --------------------------------- */
+/* --------------------------------- */
+/* MISE EN FORME DU TITRE DE LA PAGE */
+/* --------------------------------- */
+#titre_page {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 20vh;
+    align-items: center;
+    margin-top: 8vh;
+    background-image: url("../img/contact.webp");
+    background-size: c;
+	background-size:width 100%
+}
+#titre_page .valeur_flou {
+    font-family: cursive;
+    text-align: center;
+    font-size: 200px;
+    color: rgb(3 125 141);
+    text-shadow:  white 0.006em 0.006em 0.007em,
+                    #9c9c9c 1px 1px 1px,
+                    #9c9c9c 1px 2px 1px,
+                    #9c9c9c 1px 3px 1px,
+                    #9c9c9c 1px 4px 1px,
+                    #9c9c9c 1px 5px 1px,
+                    #9c9c9c 1px 6px 1px,
+                    #9c9c9c 1px 7px 1px,
+                    #9c9c9c 1px 8px 1px,
+                    #9c9c9c 1px 9px 1px,
+                    #9c9c9c 1px 10px 1px,
+                    #9c9c9c 1px 11px 1px,
+                    #9c9c9c 1px 12px 1px;
+}
+/* Mise en forme pour écran < 450px */
+@media screen and (max-width: 450px) {
+    #titre_page {
+        grid-template-rows: 20vh;
+    }
+    #titre_page .valeur_flou {
+        font-size: 50px;
+	}
+    #titre_page .valeur_double {
+        font-size: 35px;
+	}
+}
+/* Mise en forme pour écran entre 450 px et 700px */
+@media screen and (min-width: 450px) and (max-width: 700px) {
+    #titre_page {
+        grid-template-rows: 25vh;
+    }
+    #titre_page .valeur_flou {
+        font-size: 70px;
+	}
+}
+/* Mise en forme pour écran entre 700 px et 1200px  */
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+    #titre_page {
+        grid-template-rows: 30vh;
+    }
+    #titre_page .valeur_flou {
+        font-size: 110px;
+	}
+}
+/* Mise en forme pour écran entre 1200 px et 1600px  */
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+    #titre_page {
+        grid-template-rows: 35vh;
+    }
+    #titre_page .valeur_flou {
+        font-size: 150px;
+	}
+}
+/* Mise en forme pour écran supérieur à 1600px */
+@media screen and (min-width: 1600px) {
+    #titre_page {
+        grid-template-rows: 40vh;
+    }
+    #titre_page .valeur_flou {
+        font-size: 200px;
+	}
+}
+
+
+/* -------------------------------------- */
+/* -------------------------------------- */
+/* MISE EN FORME DES LIGNES SEPARATRICES  */
+/* -------------------------------------- */
+#lig_sep{
+    width: 50%;
+    border: 3px solid #4a998c;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* --------------------------------------------------- */
 /* --------------------------------------------------- */
 /*          MISE EN FORME DE LA PARTIE CONTACT         */
 /* --------------------------------------------------- */
-
-
-
-.contact #contact_titre .contact_flou {
+#page_contact {
+	display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, auto);
+}
+#page_contact .contact_entr {
+    grid-column: 1 / -1;
+	display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, auto);
+}
+#page_contact .contact_titre {
+    grid-column: 1 / -1;
+    background: #333;
+    color: #fff;
+    padding: 20px;
+}
+#page_contact .contact_mess {
+    grid-column: 1 / -1;
+    grid-row: 2;
+    background: #333;
+	padding: 20px;
+}
+#page_contact .titre_flou {
     font-family: 'Odor Mean Chey', serif;
-    font-size: 200px;
-    text-align: center;
+    font-size: 60px;
     line-height: 15%;
-    padding-top: 9%;
     opacity: 5px;
-    color: #199688;
+    color: rgba(3, 125, 141, 0.39);
+    padding-top: 10px;
 }
-.contact #contact_titre .contact_double {
+#page_contact .titre_double {
     font-family: 'Odor Mean Chey', serif;
-    font-size: 125px;
-    text-align: center;
+    font-size: 45px;
     line-height: 40%;
-    padding-bottom: 5%;
+    padding-bottom: 40px;
+    padding-left: 30px;
     margin: 0;
-    color: #0E7894;
+    color: #FFFFFF;
 }
-
-.contact form {
+#page_contact .contact_mess form {
     /* Uniquement centrer le formulaire sur la page */
     margin: 0 auto;
-    width: 800px;
+    width: 80%;
     /* Encadré pour voir les limites du formulaire */
     padding: 1em;
     background: #ccc;
@@ -51,22 +147,22 @@ body::before {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px; 
 }
-.contact form:hover {
+#page_contact .contact_mess form:hover {
     -webkit-animation-name: greenPulse;
     -webkit-animation-duration: 2s;
     -webkit-animation-iteration-count: 1;
     -webkit-box-shadow: 0 0 10px #01ffe19c;
 }
-.contact form div {
+#page_contact .contact_mess form div {
     margin-top: 1em;
     align-items: center;
     text-align: center;
 } 
-.contact input, textarea {
+#page_contact .contact_mess input, textarea {
     /* Pour s'assurer que tous les champs texte ont la même police. Par défaut, les textarea ont une police monospace */
     font-size: 1em sans-serif;
     /* Pour que tous les champs texte aient la même dimension */
-    width: 500px;
+    width: 80%;
     height : 50px;
     box-sizing: border-box;
     padding-left: 10px;
@@ -77,24 +173,26 @@ body::before {
     border-bottom: 1px solid #999;
     background: transparent;
 }
-.contact input:focus, textarea:focus {
+#page_contact .contact_mess input:focus, textarea:focus {
     /* Pour souligner légèrement les éléments actifs */
     border-top: 0;
     border-left: 0;
     border-right: 0;
     border-bottom: red;
 }
-.contact textarea {
+#page_contact .contact_mess textarea {
+    /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
+    vertical-align: top;
     /* Pour donner assez de place pour écrire du texte */
     height: auto;
     align-items: center;
     font-size: 1em sans-serif;
-    width: 500px;
+    width: 80%;
     height: 70px;
     box-sizing: border-box;
     padding-left: 10px;
 }
-.contact button {
+#page_contact .contact_mess button {
     align-items: center;
     text-align: center;
     margin: 0 auto;
@@ -107,35 +205,32 @@ body::before {
     border-radius: 20px;
     border: 0;
 }
-.contact button:hover {
+#page_contact .contact_mess button:hover {
     -webkit-animation-duration: 2s;
     background: #128D5A;
     border: 0;
     color: white;
 }
-
-
-
-
 /* NOS AGENCES */
-.agences #agences_titre .agences_flou {
-    font-family: 'Odor Mean Chey', serif;
-    font-size: 60px;
-    line-height: 15%;
-    padding-top: 50px;
-    opacity: 5px;
-    color: rgba(3, 125, 141, 0.39);
+#page_contact .contact_agences {
+    grid-column: 1 / -1;
+	display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, auto);
 }
-.agences #agences_titre .agences_double {
-    font-family: 'Odor Mean Chey', serif;
-    font-size: 45px;
-    line-height: 40%;
-    padding-bottom: 30px;
-    padding-left: 3%;
-    margin: 0;
-    color: #FFFFFF;
+#page_contact .agences_titre {
+    grid-column: 1 / -1;
+    background: #333;
+    color: #fff;
+    padding: 20px;
 }
-.agences .accordion {
+#page_contact .agences_adress {
+    grid-column: 1 / -1;
+    grid-row: 2;
+    background: #333;
+	padding: 20px;
+}
+#page_contact .accordion {
   background-color: #eee;
   color: #444;
   cursor: pointer;
@@ -150,37 +245,102 @@ body::before {
   font-size: 20px;
   color: #128D5A;
 }
-.agences .active, .accordion:hover {
+#page_contact .active, .accordion:hover {
   background-color: #ccc;
 }
-.agences .accordion:after {
+#page_contact .accordion:after {
   content: '\002B';
   color: #777;
   font-weight: bold;
   float: right;
   margin-left: 5px;
 }
-.agences .active:after {
-  content: "\2212";
+#page_contact .active:after {
+  content: "";
 }
-.agences .panel {
+#page_contact .panel {
   padding: 0 18px;
   background-color: white;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
-.agences .panel h3 {
+#page_contact .panel h3 {
     font-family: 'Odor Mean Chey', serif;
     font-size: 20px;
     padding-top: 4%;
     margin: 0;
     color: #0E7894;
 }
-.agences .panel p {
+#page_contact .panel p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     margin-left: 3%;
     margin-bottom: 0;
     color: #199688;
+}
+/* Mise en forme pour écran < 450px */
+@media screen and (max-width: 450px) {
+    #page_contact .titre_flou {
+        font-size: 30px;
+	}
+    #page_contact .titre_double {
+        font-size: 22px;
+	}
+}
+/* Mise en forme pour écran entre 450 px et 700px */
+@media screen and (min-width: 450px) and (max-width: 700px) {
+    #page_contact .titre_flou {
+        font-size: 40px;
+	}
+    #page_contact .titre_double {
+        font-size: 32px;
+	}
+}
+/* Mise en forme pour écran entre 700 px et 1200px  */
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+    #page_contact .titre_flou {
+        font-size: 60px;
+        padding-top: 20px;
+	}
+    #page_contact .titre_double {
+        font-size: 45px;
+	}
+}
+/* Mise en forme pour écran entre 1200 px et 1600px  */
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+    #page_contact {
+        grid-template-columns: repeat(2, 50% 50%);
+    }
+    #page_contact .contact_entr {
+        grid-column: span 1;
+    }
+    #page_contact .contact_agences {
+        grid-column: span 1;
+    }
+    #page_contact .titre_flou {
+        font-size: 40px;
+	}
+    #page_contact .titre_double {
+        font-size: 32px;
+	}
+}
+/* Mise en forme pour écran supérieur à 1600px */
+@media screen and (min-width: 1600px) {
+    #page_contact {
+        grid-template-columns: repeat(2, 50% 50%);
+    }
+    #page_contact .contact_entr {
+        grid-column: span 1;
+    }
+    #page_contact .contact_agences {
+        grid-column: span 1;
+    }
+    #page_contact .titre_flou {
+        font-size: 60px;
+        padding-top: 20px;
+	}
+    #page_contact .titre_double {
+        font-size: 45px;
+	}
 }
