--- a/css/APropos.css
+++ b/css/APropos.css
@@ -139,23 +139,62 @@
   background: #333;
   color: #fff;
   padding: 20px;
+  padding-top: 0;
   text-align: center;
 }
-#valeur_entrep .design_info img {
-    height: auto;
-    width: 30%;
+
+#valeur_entrep .design_info .flip-valeur {
+    background-color: #333;
+    width: 300px;
+    height: 200px;
+    border: none;
+    text-align: center;
+    color: #fff;
+    perspective: 1000px;
+    padding: 20px;
+}
+#valeur_entrep .design_info .flip-valeur-inner {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}  
+#valeur_entrep .design_info .flip-valeur:hover .flip-valeur-inner {
+    transform: rotateY(180deg);
+}  
+#valeur_entrep .design_info .flip-valeur-front, .flip-valeur-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}  
+#valeur_entrep .design_info .flip-valeur .flip-valeur-front {
+    background-color: transparent;
+    color: black;
+}  
+#valeur_entrep .design_info .flip-valeur .flip-valeur-back {
+    background-color: #333;
+    color: white;
+    transform: rotateY(180deg);
+}
+#valeur_entrep .design_info .flip-valeur .flip-valeur-front img {
+    height: 100%;
+    width: auto;
     margin-right: 15px;
     margin-left: 15px;
 }
-#valeur_entrep .design_info hr{
-    width: 100%;
+#valeur_entrep .design_info .flip-valeur .flip-valeur-back hr{
+    width: auto;
     border: 2px solid #128D5A;
 }
-#valeur_entrep p {
+#valeur_entrep .design_info .flip-valeur .flip-valeur-back p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    padding-left: 30px;
+    padding: 2px;
     color: #FFFFFF;
+    text-align: center;
 }
 #valeur_entrep ul {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
