--- a/css/APropos.css
+++ b/css/APropos.css
@@ -138,7 +138,7 @@
 #valeur_entrep .design_info {
   background: #333;
   color: #fff;
-  padding: 20px;
+  padding-bottom: 20px;
   padding-top: 0;
   text-align: center;
 }
@@ -192,7 +192,7 @@
 #valeur_entrep .design_info .flip-valeur .flip-valeur-back p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    padding: 2px;
+    padding: 4px;
     color: #FFFFFF;
     text-align: center;
 }
