--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /* --------------------------------------------------- */
 /*            MISE EN FORME DE MA PAGE WEB             */
-
 * {
     margin: 0;
     padding: 0;
@@ -36,7 +35,6 @@ body::before {
     height: 100%;
     z-index: -1;
 }
-
 span{
 	color: #ff7600;
 }
@@ -47,11 +45,21 @@ span{
 	}
 }
 
+/* Appel des différents styles */
+/* Ecriture du Titre principal de la page */
+	@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap'); /* font-family: 'Montserrat', sans-serif; */
+/* Ecriture du Sous-titre du Titre principal de la page */
+	@import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap'); /* font-family: 'Montaga', serif; */
+/* Ecriture des différentes sous-parties */
+	@import url('https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap'); /* font-family: 'Odor Mean Chey', serif; */
+/* Ecriture des différents paragraphes */
+	@import url('https://fonts.googleapis.com/css2?family=Molengo&display=swap'); /* font-family: 'Molengo', sans-serif; */
+    
+
 /* --------------------------------------------------- */
 /* --------------------------------------------------- */
 /*       MISE EN FORME DE LA BARRE DE NAVIGATION       */
 /* --------------------------------------------------- */
-
 header {
     position: fixed;
     width: 100%;
@@ -108,7 +116,6 @@ nav {
 div {
     color: #125c8d;
 }
-
 /* Mise en forme pour les différentes tailles d'écran */
 @media all and (max-width: 800px) {
     .toggle {
@@ -193,6 +200,189 @@ div {
 }
 
 
+/* --------------------------------------------------- */
+/* --------------------------------------------------- */
+/*             MISE EN FORME PAGE D'ACCEUIL            */
+/* --------------------------------------------------- */
+#page_acceuil {
+    background: #1d1d1d;
+	height: calc(92vh - 70px);
+	padding: 90px 0;
+    /*background-image: url(../img/image2Accueil.png);
+    background-position-y: top;
+    background-repeat: no-repeat;
+    background-position-x: right;*/
+}
+#page_acceuil .intro_ent{
+	height: 100%;
+	width: 95%;
+    margin: 0 auto;
+}
+#page_acceuil .intro_ent h1{
+	z-index: 5;
+	margin: 10px 0 0 0;
+    font-size: 100px;
+    font-family: fangsong;
+    font-style: italic;
+    font-weight: bold;
+    color: #ffffff;
+}
+#page_acceuil .intro_ent span{
+	display: inline-block;
+    font-family: montserrat,sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    color: #fec303;
+    margin: 30px 0;
+}
+#page_acceuil .intro_ent span::before{
+	content: "";
+    position: relative;
+    display: inline-block;
+    height: 2px;
+    width: 40px;
+    bottom: 4px;
+    background: #fec303;
+    margin-right: 16px;
+}
+#page_acceuil .intro_ent p{
+	display: block;
+	text-align: justify;
+    max-width: 660px;
+    font-size: 16px;
+    line-height: 26px;
+    color: #fff;
+}
+#page_acceuil .intro_desc{
+    position: absolute;
+    right: 0;
+    bottom: 200px;
+    height: 400px;
+    width: 680px;
+    z-index: 1;
+}
+#page_acceuil .desc_etape{
+    display: inline-block;
+    vertical-align: top;
+    width: 220px;
+    padding: 169px 20px 54px 20px;
+    z-index: 2;
+}
+#page_acceuil .desc_etape:first-child{
+	    opacity: .3;
+}
+#page_acceuil .desc_etape:hover{
+	opacity: 1;
+}
+#page_acceuil .desc_etape strong{
+    display: block;
+    font-family: montserrat,sans-serif;
+    font-weight: 600;
+    color: #fff;
+    font-size: 17px;
+    line-height: 17px;
+    margin: 0 0 29px;
+}
+#page_acceuil .desc_etape p{
+    position: relative;
+    font-size: 15px;
+    line-height: 26px;
+    color: #fff;
+    margin: 0 0 25px;
+    font-family: merriweather,sans-serif;
+    font-weight: 300;
+    max-height: 150px;
+    overflow: hidden;
+}
+#page_acceuil .desc_etape p::after{
+    content: "...";
+    position: absolute;
+    bottom: 0;
+    right: 5px;
+    box-shadow: 0 0 5px 4px #161616;
+    display: block;
+    background: #161616;
+    height: 26px;
+}
+#page_acceuil .desc_etape span{
+	font-size: 14px;
+    line-height: 14px;
+    color: #959593;
+	transition: all .2s ease;
+}
+/* Mise en forme pour écran < 450px */
+@media screen and (max-width: 450px) {
+	#page_acceuil .intro_ent h1{
+		font-size: 50px;
+	}
+	#page_acceuil .intro_ent span{
+		font-size: 22px;
+	}
+	#page_acceuil .intro_ent p{
+		max-width: 360px;
+		font-size: 12px;
+		line-height: 20px;
+	}
+}
+/* Mise en forme pour écran entre 450 px et 700px */
+@media screen and (min-width: 450px) and (max-width: 700px) {
+	#page_acceuil .intro_ent h1{
+		font-size: 70px;
+	}
+	#page_acceuil .intro_ent span{
+		font-size: 24px;
+	}
+	#page_acceuil .intro_ent p{
+		max-width: 420px;
+		font-size: 14px;
+		line-height: 21px;
+	}
+}
+/* Mise en forme pour écran entre 700 px et 1200px  */
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+	#page_acceuil .intro_ent h1{
+		font-size: 90px;
+	}
+	#page_acceuil .intro_ent span{
+		font-size: 26px;
+	}
+	#page_acceuil .intro_ent p{
+		max-width: 500px;
+		font-size: 16px;
+		line-height: 23px;
+	}
+}
+/* Mise en forme pour écran entre 1200 px et 1600px  */
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+	#page_acceuil .intro_ent h1{
+		font-size: 110px;
+	}
+	#page_acceuil .intro_ent span{
+		font-size: 28px;
+	}
+	#page_acceuil .intro_ent p{
+		max-width: 640px;
+		font-size: 18px;
+		line-height: 24px;
+
+	}
+}
+/* Mise en forme pour écran supérieur à 1600px */
+@media screen and (min-width: 1600px) {
+	#page_acceuil .intro_ent h1{
+		font-size: 130px;
+	}
+	#page_acceuil .intro_ent span{
+		font-size: 30px;
+	}
+	#page_acceuil .intro_ent p{
+		max-width: 850px;
+		font-size: 20px;
+		line-height: 26px;
+	}
+}
+
+
 
 
 /* --------------------------------------------------- */
@@ -207,7 +397,7 @@ footer {
     background: #565656;
     min-height: 100px;
     padding: 10px 40px;
-    margin-top: 20px;
+    margin-top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -292,6 +482,7 @@ footer p {
     right: 20px;
     margin-left: 20px;
     max-width: 310px;
+	z-index: 10;
 }  
 .newsletter .newsletter-header {
     padding: 10px 15px;
@@ -337,6 +528,3 @@ footer p {
     opacity: 0.8;
     cursor: pointer;
 }
-
-
-
